Added application-local file and some enhancements